[package]
name = "cfgparser_core"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
base64 = "0.22.1"
cfgparser_encryption = { path = "../cfgparser_encryption" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]
